--- a/Sprint 1/Backend/package.json
+++ b/Sprint 1/Backend/package.json
@@ -25,8 +25,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "request": "^2.88.2",
+    "router": "^1.3.7",
     "url": "^0.11.0",
     "validator": "^13.7.0"
   }
