--- a/Sprint 1/frontend/package.json
+++ b/Sprint 1/frontend/package.json
@@ -20,6 +20,10 @@
 
     "@testing-library/user-event": "^13.5.0",
 
+    "axios": "^1.2.1",
+
+    "jest": "^27.5.1",
+
     "react": "^18.2.0",
 
     "react-dom": "^18.2.0",
@@ -33,6 +37,8 @@
     "react-select": "^5.5.6",
 
     "react-select-country-list": "^2.2.3",
+
+    "validator": "^13.7.0",
 
     "web-vitals": "^2.1.4"
 
