--- a/Sprint 1/frontend/package.json
+++ b/Sprint 1/frontend/package.json
@@ -22,11 +22,17 @@
 
     "axios": "^1.2.1",
 
+    "fetch": "^1.1.0",
+
     "jest": "^27.5.1",
+
+    "node-fetch": "^3.3.0",
 
     "react": "^18.2.0",
 
     "react-dom": "^18.2.0",
+
+    "react-modal": "^3.16.1",
 
     "react-rating-stars-component": "^2.2.0",
 
