--- a/Sprint 1/frontend/package.json
+++ b/Sprint 1/frontend/package.json
@@ -44,6 +44,8 @@
 
     "react-select-country-list": "^2.2.3",
 
+    "react-star-ratings": "^2.3.0",
+
     "validator": "^13.7.0",
 
     "web-vitals": "^2.1.4"
