--- a/Sprint 1/frontend/package.json
+++ b/Sprint 1/frontend/package.json
@@ -46,6 +46,8 @@
 
     "react-star-ratings": "^2.3.0",
 
+    "react-youtube": "^10.1.0",
+
     "validator": "^13.7.0",
 
     "web-vitals": "^2.1.4"
