--- a/Sprint 1/frontend/package.json
+++ b/Sprint 1/frontend/package.json
@@ -22,17 +22,25 @@
 
     "axios": "^1.2.1",
 
+    "bootstrap": "^5.2.3",
+
     "fetch": "^1.1.0",
 
     "jest": "^27.5.1",
+
+    "jspdf": "^2.5.1",
 
     "node-fetch": "^3.3.0",
 
     "react": "^18.2.0",
 
+    "react-bootstrap": "^2.7.0",
+
     "react-dom": "^18.2.0",
 
     "react-modal": "^3.16.1",
+
+    "react-rating": "^2.0.5",
 
     "react-rating-stars-component": "^2.2.0",
 
@@ -44,13 +52,13 @@
 
     "react-select-country-list": "^2.2.3",
 
-    "react-star-ratings": "^2.3.0",
-
     "react-youtube": "^10.1.0",
 
     "validator": "^13.7.0",
 
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+
+    "youtube-react": "^0.0.1"
 
   },
 
